# ehce

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix  toolchain.toml
collider_generator/: Cargo.toml
collider_generator/src/: image_ext.rs  lib.rs
combat/: Cargo.toml
combat/src/: fleet.rs  lib.rs  resources.rs  signals.rs  spawning.rs  unit.rs  units.rs  variables.rs
combat/src/unit/: ship.rs
core/: Cargo.toml
database/: Cargo.toml
database/src/: model.rs
database/src/model/: characteristic.rs  combat_settings.rs  component.rs  component_stats.rs  device.rs  fleet.rs  formula.rs  mod_settings.rs  models_exp.rs  resource.rs  serialization.rs  ship.rs  ship_build.rs  variable.rs
database/src/model/device/: engine_device.rs
database/src/model/serialization/: diagnostic.rs
database_model_macro/: Cargo.toml
database_model_macro/src/: enums.rs  lib.rs  structs.rs
ehce/: Cargo.toml
ehce/assets/mod/: ship.json  ship2.json
ehce/assets/mod/ships/tarus/: tarus.json
ehce/assets/mod/stats/: health.json
ehce/assets/mod2/: ship.json
ehce/imported_assets/: log
ehce/imported_assets/Default/mod/: ship.json  ship2.json
ehce/mods/: $schema.json
ehce/mods/mod/combat_settings/: combat_settings.json
ehce/mods/mod/fleets/: fleet1.json
ehce/mods/mod/ships/tarus/: tarus.json  tarus.json5  tarus_build.json
ehce/mods/mod/stats/: health.json
ehce/mods/mod2/: ship2.json
ehce/src/: main.rs
ehce_core/: Cargo.toml
ehce_core/src/: init.rs  json5_asset_plugin.rs  lib.rs  mods.rs
ehce_core/src/glue/: combat.rs
ehce_core/src/mods/: loading.rs  model.rs
ehce_core/src/mods/model/: ship.rs
scrapcore_serialization/: Cargo.toml  model.toml
scrapcore_serialization/src/: lib.rs  registry.rs  reservation.rs  serialization.rs  test.rs
scrapcore_serialization/src/registry/: entry.rs  index.rs  inline.rs  insert.rs  kind.rs
scrapcore_serialization/src/serialization/: bevy.rs  box_wrapper.rs  error.rs  helpers.rs  min_max.rs
scrapcore_serialization/src/serialization/error/: diagnostic.rs
scrapcore_serialization_macro/: Cargo.toml
scrapcore_serialization_macro/src/: enums.rs  lib.rs  registry.rs  structs.rs
scrapcore_serialization_macro/src/registry/: parser.rs
slabmap/: Cargo.toml
slabmap/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  miette_ext.rs  slab_map.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
