[workspace]
resolver = "2"
members = ["combat", "ehce", "ehce_core", "utils", "xtask"]

[workspace.dependencies]
bevy = { version = "0.12.0", default-features = false }
bevy_common_assets = "0.8"
bimap = "0.6"
bytemuck = "1"
camino = "1"
euclid = { version = "0.22", features = ["bytemuck"] }
glam = { version = "0.24", features = ["bytemuck"] }
miette = "5"
nohash-hasher = "0.2"
paste = "1"
rustc-hash = "1"
serde = "1"
serde_derive = "1"
serde_json5 = "0.1"
slab = "0.4"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
