[workspace]
resolver = "2"
members = [
    "collider_generator",
    "combat",
    "database",
    "database_model_macro",
    "ehce",
    "ehce_core",
    "utils",
    "xtask",
]

[workspace.dependencies]
attribute-derive = "0.6"
bevy = { version = "0.12.0", default-features = false }
bevy_common_assets = "0.8"
bevy-inspector-egui = "0.21"
bevy_xpbd_2d = "0.3"
bimap = "0.6"
bytemuck = "1"
camino = "1"
color-backtrace = "0.6"
contour = "0.11"
convert_case = "0.6"
duplicate = "1"
euclid = { version = "0.22", features = ["bytemuck"] }
exmex = "0.18"
extension-trait = "1"
glam = { version = "0.24", features = ["bytemuck"] }
geo = "0.27"
itertools = "0.12"
miette = { version = "5", features = ["fancy"] }
nohash-hasher = "0.2"
paste = "1"
proc-macro2 = "1.0"
quote = "1.0"
rustc-hash = "1"
serde = "1"
serde_derive = "1"
serde_json5 = "0.1"
slab = "0.4"
soa_derive = "0.13"
schemars = "0.8"
strum = "0.25"
strum_macros = "0.25"
syn = "2.0"
thiserror = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
