[package]
name = "collider_generator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_xpbd_2d = { workspace = true }
contour = { workspace = true, features = ["f32"] }
geo = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
