[package]
name = "combat"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_sprite", "bevy_gilrs"] }
bevy-inspector-egui = { workspace = true }
bevy_mod_sysfail = { workspace = true }
bevy_vector_shapes = "0.6"
bevy_xpbd_2d = { workspace = true }
collider_generator = { path = "../collider_generator" }
ehce_core = { path = "../ehce_core" }
euclid = { workspace = true }
exmex = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
nohash-hasher = { workspace = true }
soa_derive = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
