[package]
name = "database"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false, features = ["png", "jpeg", "bevy_asset", "async-io"] }
miette = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
