[package]
name = "database"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "png",
    "jpeg",
    "bevy_asset",
    "async-io",
] }
database_model_macro = { path = "../database_model_macro" }
duplicate = { workspace = true }
exmex = { workspace = true }
glam = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
miette = { workspace = true }
nohash-hasher = { workspace = true }
paste = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
