[package]
name = "database_model_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attribute-derive = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true }
