[package]
name = "ehce"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combat = { path = "../combat" }
ehce_core = { path = "../ehce_core" }
#accrete = "0.2"

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "multi-threaded",
    "android_shared_stdcxx",
    "asset_processor",
    "basis-universal",
    "file_watcher"
]

[target.'cfg(target_family = "unix")'.dependencies.bevy]
workspace = true
default-features = false
features = [
    "x11",
    "wayland",
]
