[package]
name = "utils"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { workspace = true }
nohash-hasher = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
slab = { workspace = true }
